Update modal styles and README for Homework 6; added responsive design details and script inclusion in index.html.

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     </footer>
 
     <!-- MODAL -->
-    <div class="modal-window">
+    <div class="modal-window is-hidden">
       <div class="modal-container">
         <button class="modal-button" type="button">
           <svg class="modal-button-svg" width="8" height="8">
@@ -575,5 +575,6 @@
         </form>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
