Refactor social media links in index.html and enhance CSS with responsive design for header, hero, features, team, and footer sections. Updated class names for consistency.

--- a/index.html
+++ b/index.html
@@ -145,28 +145,28 @@
                 <p class="team-list-paragraphs">Product Designer</p>
                 <ul class="social-media">
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -183,32 +183,32 @@
                 alt="Tom Ford"
               />
               <div class="sec-team-list-div">
-                <h3 class="team-list- sec-team-hthree">Tom Ford</h3>
+                <h3 class="team-list-heading sec-team-hthree">Tom Ford</h3>
                 <p class="team-list-paragraphs">Frontend Developer</p>
                 <ul class="social-media">
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -229,28 +229,28 @@
                 <p class="team-list-paragraphs">Marketing</p>
                 <ul class="social-media">
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="social-media-list-a" href="#">
+                    <a class="social-media-list-aaa" href="#">
                       <svg width="16" height="16" class="social-svgs">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
