--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
               <a class="nav-links links-color-on-hover" href="">Contacts</a>
             </li>
           </ul>
+          <svg
+            class="header-menu-svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M3.59961 6.00078C3.59961 5.68252 3.72604 5.3773 3.95108 5.15225C4.17612 4.92721 4.48135 4.80078 4.79961 4.80078H19.1996C19.5179 4.80078 19.8231 4.92721 20.0481 5.15225C20.2732 5.3773 20.3996 5.68252 20.3996 6.00078C20.3996 6.31904 20.2732 6.62427 20.0481 6.84931C19.8231 7.07435 19.5179 7.20078 19.1996 7.20078H4.79961C4.48135 7.20078 4.17612 7.07435 3.95108 6.84931C3.72604 6.62427 3.59961 6.31904 3.59961 6.00078Z"
+              fill="#2F2F37"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M3.59961 12.0008C3.59961 11.6825 3.72604 11.3773 3.95108 11.1523C4.17612 10.9272 4.48135 10.8008 4.79961 10.8008H19.1996C19.5179 10.8008 19.8231 10.9272 20.0481 11.1523C20.2732 11.3773 20.3996 11.6825 20.3996 12.0008C20.3996 12.319 20.2732 12.6243 20.0481 12.8493C19.8231 13.0744 19.5179 13.2008 19.1996 13.2008H4.79961C4.48135 13.2008 4.17612 13.0744 3.95108 12.8493C3.72604 12.6243 3.59961 12.319 3.59961 12.0008Z"
+              fill="#2F2F37"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M3.59961 18.0008C3.59961 17.6825 3.72604 17.3773 3.95108 17.1523C4.17612 16.9272 4.48135 16.8008 4.79961 16.8008H19.1996C19.5179 16.8008 19.8231 16.9272 20.0481 17.1523C20.2732 17.3773 20.3996 17.6825 20.3996 18.0008C20.3996 18.319 20.2732 18.6243 20.0481 18.8493C19.8231 19.0744 19.5179 19.2008 19.1996 19.2008H4.79961C4.48135 19.2008 4.17612 19.0744 3.95108 18.8493C3.72604 18.6243 3.59961 18.319 3.59961 18.0008Z"
+              fill="#2F2F37"
+            />
+          </svg>
         </nav>
         <address class="address-neutralize address-flexer">
           <ul class="address-ulist-style">
@@ -432,7 +459,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-social-media-div">
           <p class="footer-social-media-p">Social media</p>
           <ul class="footer-social-media-ul">
             <li class="footer-social-media-li">
@@ -488,11 +515,11 @@
     </footer>
 
     <!-- MODAL -->
-    <div class="modal-window is-hidden">
+    <div class="modal-window">
       <div class="modal-container">
         <button class="modal-button" type="button">
-          <svg class="modal-button-svg" width="8" height="8">
-            <use href="./images/icons.svg#icon-antenna"></use>
+          <svg class="modal-button-svg" width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8 0.805714L7.19429 0L4 3.19429L0.805714 0L0 0.805714L3.19429 4L0 7.19429L0.805714 8L4 4.80571L7.19429 8L8 7.19429L4.80571 4L8 0.805714Z" fill="#2E2F42" />
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
@@ -573,6 +600,81 @@
           <!-- Submit -->
           <button type="submit" class="modal-submit-button">Send</button>
         </form>
+      </div>
+    </div>
+
+    <!-- MENU-MODAL -->
+
+    <div class="menu-modal">
+      <div class="menu-modal-container">
+        <div class="menu-modal-close-button">
+          <svg
+            class="menu-modal-close-button-svg-first"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle
+              opacity="0.1"
+              cx="12"
+              cy="12"
+              r="11.5"
+              fill="#E7E9FC"
+              stroke="#2E2F42"
+            />
+          </svg>
+          <svg
+            class="menu-modal-close-button-svg-second"
+            width="8"
+            height="8"
+            viewBox="0 0 8 8"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g clip-path="url(#clip0_748786_1048)">
+              <path
+                d="M8 0.805714L7.19429 0L4 3.19429L0.805714 0L0 0.805714L3.19429 4L0 7.19429L0.805714 8L4 4.80571L7.19429 8L8 7.19429L4.80571 4L8 0.805714Z"
+                fill="#2E2F42"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_748786_1048">
+                <rect width="8" height="8" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
+        <div class="menu-modal-middle-div">
+          <ul class="menu-modal-ull">
+            <li class="menu-modal-lii">
+              <a class="menu-modal-aaa" href="">Studio</a>
+            </li>
+            <li class="menu-modal-lii">
+              <a class="menu-modal-aaa" href="">Portfolio</a>
+            </li>
+            <li class="menu-modal-lii">
+              <a class="menu-modal-aaa" href="">Contacts</a>
+            </li>
+          </ul>
+          <ul class="menu-modal-ull-two">
+            <li class="menu-modal-lii-two">
+              <a class="menu-modal-aaa-two" href="">+11 (000) 111-11-11</a>
+            </li>
+            <li class="menu-modal-lii-two">
+              <a class="menu-modal-aaa-two" href="">info@devstudio.com</a>
+            </li>
+          </ul>
+        </div>
+        <div class="menu-modal-bottom-div">
+          <img
+            src="./icons/menu-socials.svg"
+            alt="menu-modal-image"
+            width="280"
+            height="40"
+          />
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
